feat : init 4 pages

--- a/scss/_env_setting.scss
+++ b/scss/_env_setting.scss
@@ -9,6 +9,7 @@ $btn-border-color:#e1e3e1;
 
 /*font*/
 $main-font-color:#464646;
+$table-font-color:#09090B;
 $active-font-color:#0261fa;
 $label-font-color:#919191;
 $btn-font-size:12px;
