--- a/css/main.css
+++ b/css/main.css
@@ -173,8 +173,10 @@ footer .footer-container p.footer-copyright {
 .main-container h1 {
   color: #464646;
   margin: 0 30px;
-  padding-block: 24px;
+  padding-top: 24px;
+  padding-bottom: 10px;
   display: flex;
+  justify-content: space-between;
 }
 .main-container h1 span {
   margin-left: auto;
@@ -183,8 +185,14 @@ footer .footer-container p.footer-copyright {
 
 .sub-container {
   margin: 0 30px;
+  margin-bottom: 15px;
   display: flex;
   flex-direction: row;
+}
+@media (max-width: 768px) {
+  .sub-container {
+    flex-direction: column;
+  }
 }
 .sub-container article {
   flex: 1;
@@ -192,6 +200,8 @@ footer .footer-container p.footer-copyright {
 .sub-container p {
   display: flex;
   align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 .sub-container p label {
   color: #919191;
@@ -199,8 +209,119 @@ footer .footer-container p.footer-copyright {
   flex-grow: 0;
   flex-shrink: 0;
 }
+.sub-container ul {
+  padding-inline-start: 20px;
+  margin: 0;
+}
+.sub-container ul li {
+  margin: 15px 0;
+}
+.sub-container ul li p {
+  margin: 8px 0;
+}
+.sub-container table {
+  width: 100%;
+}
+.sub-container table tr {
+  text-decoration: none;
+}
+.sub-container table th, .sub-container table .expand-container .expand-sub-container .expand-content .expand-table-container .expand-table td, .expand-container .expand-sub-container .expand-content .expand-table-container .expand-table .sub-container table td, .sub-container table td {
+  border-bottom: 1px solid #e4e4e4;
+  color: #919191;
+  padding: 12px 0;
+}
+.sub-container table td {
+  color: #09090B;
+}
+
+.expand-container {
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  background-color: #f4f5f9;
+  margin: 24px 32px;
+}
+.expand-container h1 {
+  display: block;
+  padding-block: 24px;
+  display: inline-block;
+}
+.expand-container h1 p {
+  color: #919191;
+  font-size: 14px;
+  margin: 0;
+}
+.expand-container .expand-title {
+  display: flex;
+  flex-direction: row;
+  border-radius: 20px;
+  justify-content: space-between;
+  background: #f4f5f9;
+}
+.expand-container .expand-title h1 {
+  display: block;
+  display: inline-block;
+}
+.expand-container .expand-title h1 p {
+  color: #919191;
+  font-size: 14px;
+  margin: 0;
+}
+.expand-container .expand-sub-container {
+  margin: 0 30px;
+}
+.expand-container .expand-sub-container .expand-content p {
+  font-weight: bold;
+  margin: 0;
+}
+.expand-container .expand-sub-container .expand-content .expand-table-container {
+  display: flex;
+  flex-direction: row;
+  border-bottom: 1px solid #e4e4e4;
+}
+.expand-container .expand-sub-container .expand-content .expand-table-container p {
+  display: flex;
+  align-items: center;
+  width: 30%;
+  justify-content: center;
+}
+.expand-container .expand-sub-container .expand-content .expand-table-container .expand-table {
+  width: 100%;
+}
+.expand-container .expand-sub-container .expand-content .expand-table-container .expand-table .table-course {
+  width: 35%;
+}
+.expand-container .expand-sub-container .expand-content .expand-table-container .expand-table th, .expand-container .expand-sub-container .expand-content .expand-table-container .expand-table td {
+  color: #919191;
+  padding: 12px 0;
+  font-weight: 500;
+}
+.expand-container .expand-sub-container .expand-content .expand-table-container .expand-table td {
+  border-top: 1px solid #e4e4e4;
+  color: #09090B;
+}
+.expand-container .expand-sub-container .expand-content .expand-table-container ul {
+  list-style: none;
+  padding-left: 0;
+}
+.expand-container .expand-sub-container .expand-content .expand-table-container ul li {
+  color: #09090B;
+  font-weight: 500;
+}
+.expand-container .expand-sub-container .expand-content .expand-table-container:last-child {
+  border-bottom: none;
+}
 
 p {
+  color: #464646;
+}
+
+.btn-semester {
+  display: flex;
+  flex-direction: row;
+}
+.btn-semester a {
+  text-decoration: none;
   color: #464646;
 }
 
@@ -208,7 +329,6 @@ p {
   border-radius: 18px;
   border: 1px solid #e1e3e1;
   font-size: 12px !important;
-  font-weight: bold;
   padding: 4px 12px;
   margin: 0 12px;
   display: flex;
