--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,3 @@
-
 @import "env_setting";
 @import "common_setting";
 @import url(https://fonts.googleapis.com/earlyaccess/notosanstc.css);
@@ -11,292 +10,503 @@
 }
 
 body {
-  margin:0 auto;
+  margin: 0 auto;
   font-family: "Noto Sans TC", sans-serif;
   font-size: 14px;
   background: white;
   text-align: center;
-  overflow-x:hidden;
+  overflow-x: hidden;
 }
+
 main {
   display: grid;
-	grid-template-areas:
+  grid-template-areas:
     "nav section";
-	grid-template-rows:1fr;
-	grid-template-columns: minmax(260px, 20%) 80%;
-  @include tablet{
+  grid-template-rows: 1fr;
+  grid-template-columns: minmax(260px, 20%) 80%;
+
+  @include tablet {
     display: flex;
     flex-direction: column;
-    margin:0 16px;
+    margin: 0 16px;
   }
-  @include phone{
+
+  @include phone {
     display: flex;
     flex-direction: column;
-    margin:0 16px;
+    margin: 0 16px;
   }
+
   margin:0 auto;
   align-items: top;
   justify-content: center;
 }
 
-nav{
+nav {
   grid-area: nav;
-  border-right:1px solid $main-border-color;
-  padding:16px;
+  border-right: 1px solid $main-border-color;
+  padding: 16px;
 }
-.left-menu{
-  text-align:left;
-  label{
-    color:$sub-color;
-    font-size:12px;
-    display:block;
-    margin:8px auto;
+
+.left-menu {
+  text-align: left;
+
+  label {
+    color: $sub-color;
+    font-size: 12px;
+    display: block;
+    margin: 8px auto;
   }
-  a{
-    color:$main-font-color;
-    text-decoration:none;
-    display:flex;
-    border-radius:8px;
-    padding:8px 16px;
-    min-height:36px;
-    &:hover{
-      color:$active-font-color;
-      background:$main-hover-bg-color;
-      fill:$main-hover-bg-color;
+
+  a {
+    color: $main-font-color;
+    text-decoration: none;
+    display: flex;
+    border-radius: 8px;
+    padding: 8px 16px;
+    min-height: 36px;
+
+    &:hover {
+      color: $active-font-color;
+      background: $main-hover-bg-color;
+      fill: $main-hover-bg-color;
     }
-    img{
-      margin-inline-end:8px;
-      &:hover{
-        fill:$main-hover-bg-color;
+
+    img {
+      margin-inline-end: 8px;
+
+      &:hover {
+        fill: $main-hover-bg-color;
       }
     }
   }
 }
-section{
-  margin:0 auto;
-  justify-content:center;
-  width:100%;
-  grid-area:section; 
+
+section {
+  margin: 0 auto;
+  justify-content: center;
+  width: 100%;
+  grid-area: section;
 }
-.main-section{
-  background:$sub-bg-color;
+
+.main-section {
+  background: $sub-bg-color;
 }
-footer{
-  background:$main-color;
+
+footer {
+  background: $main-color;
   color: white;
   padding-block: 16px;
-  .footer-container{
-    display:flex;
-    justify-content:flex-end;
-    margin:0 15%;
-    @include tablet{
-      display:block;
-      justify-content:center;
-      margin:0 auto;
+
+  .footer-container {
+    display: flex;
+    justify-content: flex-end;
+    margin: 0 15%;
+
+    @include tablet {
+      display: block;
+      justify-content: center;
+      margin: 0 auto;
     }
-    @include phone{
-      display:block;
-      justify-content:center;
-      margin:0 auto;
+
+    @include phone {
+      display: block;
+      justify-content: center;
+      margin: 0 auto;
     }
-    & :last-child{
+
+    & :last-child {
       border-left: 1px solid white;
     }
-    h1{
+
+    h1 {
       color: white;
-      font-size:20px;
-      display:inline-block;
-      margin:0 auto 0 0;
-      @include tablet{
-        display:block;
+      font-size: 20px;
+      display: inline-block;
+      margin: 0 auto 0 0;
+
+      @include tablet {
+        display: block;
       }
-      @include phone{
-        display:block;
+
+      @include phone {
+        display: block;
       }
     }
-    h3{
-      font-size:16px;
-      display:inline-block;
-      padding:0 12px;
-      margin-block:8px;
+
+    h3 {
+      font-size: 16px;
+      display: inline-block;
+      padding: 0 12px;
+      margin-block: 8px;
     }
-    p{
+
+    p {
       color: white;
-      display:inline-block;
-      padding:0 12px;
-      &.footer-copyright{
+      display: inline-block;
+      padding: 0 12px;
+
+      &.footer-copyright {
         margin-right: auto;
         padding: 0;
       }
-      @include tablet{
-        &.footer-policy{
-          display:none;
+
+      @include tablet {
+        &.footer-policy {
+          display: none;
         }
       }
-      @include phone{
-        &.footer-policy{
-          display:none;
+
+      @include phone {
+        &.footer-policy {
+          display: none;
         }
       }
     }
   }
 }
-.main-container{
-  border-radius:20px;
+
+.main-container {
+  border-radius: 20px;
   text-align: left;
   background: white;
-  margin:24px 32px;
-  display:flex;
-  flex-direction:column;
-  h1{
-    color:$main-font-color;
-    margin:0 30px;
-    padding-block:24px;
-    display:flex;
-    span{
-      margin-left:auto;
+  margin: 24px 32px;
+  display: flex;
+  flex-direction: column;
+
+  h1 {
+    color: $main-font-color;
+    margin: 0 30px;
+    padding-top: 24px;
+    padding-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+
+    span {
+      margin-left: auto;
       font-size: 14px;
     }
   }
 }
-.sub-container{
-  margin:0 30px;
-  display:flex;
-  flex-direction:row;
-  article{
-    flex:1;
+
+.sub-container {
+  margin: 0 30px;
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: row;
+
+  @include phone {
+    flex-direction: column;
   }
-  p{
-    display:flex;
-    align-items:center;    
-    label{
-      color:$label-font-color;
-      flex-basis:100px;
-      flex-grow:0;
-      flex-shrink:0;
+
+  article {
+    flex: 1;
+  }
+
+  p {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+
+    label {
+      color: $label-font-color;
+      flex-basis: 100px;
+      flex-grow: 0;
+      flex-shrink: 0;
     }
   }
-}
-p{color:$main-font-color;}
-.btn-edit{
-  border-radius:18px;
-  border:1px solid $btn-border-color;
-  font-size:$btn-font-size !important;
-  font-weight:bold;
-  padding:4px 12px;
-  margin:0 12px;
-  display:flex;
-  align-items:center;
-  cursor:pointer;
-  img{
-    margin:0 4px;
-  }
-  &:hover{
-    background:$btn-hover-color;
-  }
-}
-.header-menu{
-  background:white;
-  display:flex;
-  justify-content:right;
-  padding:0 28px;
-  align-items: center;
-  min-height: 48px;
-  border-bottom: 1px solid $main-border-color;
-  .ic-login{
-    cursor: pointer;
-    margin-inline:4px;
-    img{
-      width:24px;
-      height:24px;
+
+  ul {
+    padding-inline-start: 20px;
+    margin: 0;
+
+    li {
+      margin: 15px 0;
+
+      p {
+        margin: 8px 0;
+      }
     }
   }
-  .ic-news-board{
-    margin-inline:4px;
-    cursor: pointer;
-  }
-}
-@mixin headerbtn{
-  border-radius:40px;
-  border:1px solid $main-border-color;
-  background:$main-color;
-}
-.header-logo{
-  grid-area: header-logo;
-  text-align:left;
-  margin:20px auto;
-  @include tablet{
-    text-align:left;
-    margin-inline-start: 16px;
-  }
-  @include phone{
-    text-align:left;
-    margin-inline-start: 16px;
-  }
-  img{
-    vertical-align:middle;
-    margin:0 8px 0 0;
+
+  table {
+    width: 100%;
+
+    tr {
+      text-decoration: none;
+    }
+
+    th {
+      border-bottom: 1px solid $main-border-color;
+      color: $label-font-color;
+      padding: 12px 0;
+    }
+
+    td {
+      @extend th;
+      color: $table-font-color;
+    }
   }
 }
 
-.header-login{
+.expand-container {
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  background-color: $sub-bg-color;
+  margin: 24px 32px;
+
+  h1 {
+    display: block;
+    padding-block: 24px;
+    display: inline-block;
+
+    p {
+      color: $label-font-color;
+      font-size: 14px;
+      margin: 0;
+    }
+
+  }
+
+  .expand-title {
+    display: flex;
+    flex-direction: row;
+    border-radius: 20px;
+    justify-content: space-between;
+    background: $sub-bg-color;
+
+    h1 {
+      display: block;
+      display: inline-block;
+
+      p {
+        color: $label-font-color;
+        font-size: 14px;
+        margin: 0;
+      }
+
+    }
+
+    a {}
+  }
+
+  .expand-sub-container {
+    margin: 0 30px;
+
+    .expand-content {
+      p {
+        font-weight: bold;
+        margin: 0;
+      }
+
+      .expand-table-container {
+        display: flex;
+        flex-direction: row;
+        border-bottom: 1px solid $main-border-color;
+
+        p {
+          display: flex;
+          align-items: center;
+          width: 30%;
+          justify-content: center;
+        }
+
+        .expand-table {
+          width: 100%;
+
+          .table-course {
+            width: 35%;
+          }
+
+          th {
+            color: $label-font-color;
+            padding: 12px 0;
+            font-weight: 500;
+          }
+
+          td {
+            @extend th;
+            border-top: 1px solid $main-border-color;
+            color: $table-font-color;
+          }
+        }
+
+        ul {
+          list-style: none;
+          padding-left: 0;
+
+          li {
+            color: $table-font-color;
+            font-weight: 500;
+          }
+        }
+      }
+      .expand-table-container:last-child {
+        border-bottom: none;
+      }
+    }
+  }
+
+}
+
+p {
+  color: $main-font-color;
+}
+
+.btn-semester {
+  display: flex;
+  flex-direction: row;
+
+  a {
+    text-decoration: none;
+    color: $main-font-color;
+  }
+}
+
+.btn-edit {
+  border-radius: 18px;
+  border: 1px solid $btn-border-color;
+  font-size: $btn-font-size !important;
+  padding: 4px 12px;
+  margin: 0 12px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+
+  img {
+    margin: 0 4px;
+  }
+
+  &:hover {
+    background: $btn-hover-color;
+  }
+}
+
+.header-menu {
+  background: white;
+  display: flex;
+  justify-content: right;
+  padding: 0 28px;
+  align-items: center;
+  min-height: 48px;
+  border-bottom: 1px solid $main-border-color;
+
+  .ic-login {
+    cursor: pointer;
+    margin-inline: 4px;
+
+    img {
+      width: 24px;
+      height: 24px;
+    }
+  }
+
+  .ic-news-board {
+    margin-inline: 4px;
+    cursor: pointer;
+  }
+}
+
+@mixin headerbtn {
+  border-radius: 40px;
+  border: 1px solid $main-border-color;
+  background: $main-color;
+}
+
+.header-logo {
+  grid-area: header-logo;
+  text-align: left;
+  margin: 20px auto;
+
+  @include tablet {
+    text-align: left;
+    margin-inline-start: 16px;
+  }
+
+  @include phone {
+    text-align: left;
+    margin-inline-start: 16px;
+  }
+
+  img {
+    vertical-align: middle;
+    margin: 0 8px 0 0;
+  }
+}
+
+.header-login {
   grid-area: header-login;
-  text-align:right;
-  
-  @include tablet{
-    display:none;
+  text-align: right;
+
+  @include tablet {
+    display: none;
   }
-  @include phone{
-    display:none;
+
+  @include phone {
+    display: none;
   }
-  a{
+
+  a {
     @include headerbtn;
-    color:white;
-    text-decoration:none;
-    padding:10px 18px;
+    color: white;
+    text-decoration: none;
+    padding: 10px 18px;
     font-size: 20px;
-    min-height:50px;
-    &:hover{
-      background:rgba(72,96,163,.8);;
+    min-height: 50px;
+
+    &:hover {
+      background: rgba(72, 96, 163, .8);
+      ;
     }
   }
 }
-.hide{display:none;}
+
+.hide {
+  display: none;
+}
+
 .menu-wrap {
   position: fixed;
-  top:50px;
-  right:0;
+  top: 50px;
+  right: 0;
   z-index: 1;
-  display:none;
-  @include tablet{
-    display:block;
+  display: none;
+
+  @include tablet {
+    display: block;
   }
-  @include phone{
-    display:block;
+
+  @include phone {
+    display: block;
   }
+
   .toggler {
     position: absolute;
     top: 0;
-    right:36px;
+    right: 36px;
     z-index: 2;
     cursor: pointer;
     width: 24px;
     height: 24px;
     opacity: 0;
   }
+
   .hamburger {
     position: absolute;
     top: 0;
-    right:36px;
+    right: 36px;
     z-index: 1;
-    width:24px;
-    height:24px;
-    padding:2px;
-    border-radius:4px;
-    background:$main-color;
+    width: 24px;
+    height: 24px;
+    padding: 2px;
+    border-radius: 4px;
+    background: $main-color;
     display: flex;
     align-items: center;
     justify-content: center;
+
     div {
       position: relative;
       flex: none;
@@ -307,7 +517,9 @@ p{color:$main-font-color;}
       align-items: center;
       justify-content: center;
       transition: all 0.4s ease;
-      &::before,&::after{
+
+      &::before,
+      &::after {
         content: '';
         position: absolute;
         z-index: 1;
@@ -316,12 +528,14 @@ p{color:$main-font-color;}
         height: 2px;
         background: inherit;
       }
-      &::after{
+
+      &::after {
         top: 6px;
       }
     }
   }
-  .menu{
+
+  .menu {
     position: fixed;
     top: 0;
     left: 0;
@@ -332,9 +546,10 @@ p{color:$main-font-color;}
     display: flex;
     align-items: center;
     justify-content: center;
-    background:#f9f9f9;
+    background: #f9f9f9;
+
     >div {
-      background:#f9f9f9;
+      background: #f9f9f9;
       width: 300vw;
       height: 100%;
       display: flex;
@@ -342,24 +557,28 @@ p{color:$main-font-color;}
       align-items: center;
       justify-content: center;
       transform: scale(0);
-      border-radius:50%;
+      border-radius: 50%;
       transition: all 0.4s ease;
+
       >div {
         text-align: center;
         max-width: 90vw;
         max-height: 100vh;
         opacity: 0;
         transition: opacity 0.4s ease;
-        >ul{
+
+        >ul {
           margin: 0;
           padding: 0;
-          >li{
+
+          >li {
             list-style: none;
-            color:$main-color;
+            color: $main-color;
             font-size: 1.5rem;
             padding: 1rem;
-            >a{
-              color:$main-color;
+
+            >a {
+              color: $main-color;
               text-decoration: none;
               transition: color 0.4s ease;
             }
@@ -369,26 +588,32 @@ p{color:$main-font-color;}
     }
   }
 }
-.menu-wrap .toggler:checked + .hamburger > div {
+
+.menu-wrap .toggler:checked+.hamburger>div {
   transform: rotate(135deg);
 }
-.menu-wrap .toggler:checked + .hamburger > div:before,
-.menu-wrap .toggler:checked + .hamburger > div:after {
+
+.menu-wrap .toggler:checked+.hamburger>div:before,
+.menu-wrap .toggler:checked+.hamburger>div:after {
   top: 0;
   transform: rotate(90deg);
 }
-.menu-wrap .toggler:checked:hover + .hamburger > div {
+
+.menu-wrap .toggler:checked:hover+.hamburger>div {
   transform: rotate(225deg);
 }
-.menu-wrap .toggler:checked ~ .menu {
+
+.menu-wrap .toggler:checked~.menu {
   visibility: visible;
 }
-.menu-wrap .toggler:checked ~ .menu > div {
+
+.menu-wrap .toggler:checked~.menu>div {
   transform: scale(1);
-  border-radius:0;
-  transition-duration:$menu-speed;
+  border-radius: 0;
+  transition-duration: $menu-speed;
 }
-.menu-wrap .toggler:checked ~ .menu > div > div {
+
+.menu-wrap .toggler:checked~.menu>div>div {
   opacity: 1;
   transition: opacity 0.4s ease 0.4s;
 }
