--- a/scss/_env_setting.scss
+++ b/scss/_env_setting.scss
@@ -13,6 +13,7 @@ $table-font-color:#09090B;
 $active-font-color:#0261fa;
 $label-font-color:#919191;
 $btn-font-size:12px;
+$table-detail-color:#757A70;
 
 /*btn-hover*/
 $btn-hover-color:#f4f4f5;
