--- a/scss/_env_setting.scss
+++ b/scss/_env_setting.scss
@@ -3,6 +3,7 @@ $main-color:rgba(72,96,163,1);
 $sub-color:#919191;
 $sub-bg-color:#f4f5f9;
 $main-hover-bg-color:#eef9ff;
+$table-bg-color:#EEEEEE;
 /*border-color*/
 $main-border-color:#e4e4e4;
 $btn-border-color:#e1e3e1;
@@ -14,6 +15,8 @@ $active-font-color:#0261fa;
 $label-font-color:#919191;
 $btn-font-size:12px;
 $table-detail-color:#757A70;
+$table-th-color:#71717A;
+
 
 /*btn-hover*/
 $btn-hover-color:#f4f4f5;
