--- a/css/course-overview.css
+++ b/css/course-overview.css
@@ -72,14 +72,17 @@ nav {
   min-height: 36px;
 }
 .left-menu a:hover {
-  color: #0261fa;
-  background: #eef9ff;
-  fill: #eef9ff;
+  background: #F4F4F5;
 }
 .left-menu a img {
   margin-inline-end: 8px;
 }
 .left-menu a img:hover {
+  fill: #eef9ff;
+}
+.left-menu a.active {
+  color: #0261fa;
+  background: #eef9ff;
   fill: #eef9ff;
 }
 
@@ -540,14 +543,17 @@ nav {
   min-height: 36px;
 }
 .left-menu a:hover {
-  color: #0261fa;
-  background: #eef9ff;
-  fill: #eef9ff;
+  background: #F4F4F5;
 }
 .left-menu a img {
   margin-inline-end: 8px;
 }
 .left-menu a img:hover {
+  fill: #eef9ff;
+}
+.left-menu a.active {
+  color: #0261fa;
+  background: #eef9ff;
   fill: #eef9ff;
 }
 
@@ -1059,6 +1065,7 @@ table td {
   width: -moz-max-content;
   width: max-content;
   margin: 0;
+  background-color: white;
 }
 .expand-sub-container .expand-table tr {
   padding: 12px 0;
@@ -1068,4 +1075,70 @@ table td {
 }
 .expand-sub-container .expand-table td {
   border-bottom: 1px solid #e4e4e4;
+}
+
+.time-table {
+  width: 100%;
+  border-spacing: 10px;
+  table-layout: fixed;
+}
+.time-table th, .time-table table td, table .time-table td, .time-table .expand-container .expand-sub-container .expand-content .expand-table-container .expand-table td, .expand-container .expand-sub-container .expand-content .expand-table-container .expand-table .time-table td {
+  border-radius: 4px;
+  background-color: #EEEEEE;
+  text-align: center;
+  padding: 5px;
+  color: #71717A;
+  text-decoration: none;
+  width: auto;
+}
+.time-table tr :first-child {
+  border-radius: 4px;
+  background-color: #EEEEEE;
+  text-align: center;
+  border: none;
+  color: #71717A;
+  text-decoration: none;
+}
+.time-table td {
+  background-color: #F9F9F9;
+  border: 1px solid #e4e4e4;
+  color: #919191;
+  padding: 0;
+  width: auto;
+}
+.time-table .course-tag {
+  display: flex;
+  flex-direction: row;
+  margin: 4px 4px;
+  background-color: white !important;
+  background-color: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.time-table .course-tag .course-color {
+  width: 4px;
+  background-color: #A7D8EC;
+}
+.time-table .course-tag .course-detail {
+  margin-top: 4px;
+  margin-bottom: 4px;
+}
+.time-table .course-tag .course-detail p {
+  margin: 0 4px;
+  background-color: white;
+}
+.time-table .course-tag .course-detail .course-name {
+  color: #09090B;
+  text-align: left;
+}
+.time-table .course-tag .course-detail .course-teacher {
+  color: #71717A;
+}
+.time-table .table-section {
+  width: 25px;
+}
+
+.white {
+  background-color: white !important;
 }/*# sourceMappingURL=course-overview.css.map */
