--- a/scss/course-overview.scss
+++ b/scss/course-overview.scss
@@ -2,8 +2,6 @@
 @import "course-map.scss";
 
 .expand-sub-container {
-  //display: block !important;
-
   .expand-table {
     border-collapse: collapse;
     margin-bottom: 30px;
@@ -31,6 +29,7 @@
     .btn-edit {
       width: max-content;
       margin: 0;
+      background-color: white;
     }
 
     tr {
@@ -47,4 +46,68 @@
 
   }
 
+}
+.time-table{
+  width: 100%;
+  border-spacing: 10px;
+  table-layout: fixed;
+  th{
+    border-radius: 4px;
+    background-color: $table-bg-color;
+    text-align: center;
+    padding:5px;
+    color : $table-th-color;
+    text-decoration: none;
+    width: auto;
+  }
+  tr :first-child{
+    border-radius: 4px;
+    background-color: $table-bg-color;
+    text-align: center;
+    border: none;
+    color : $table-th-color;
+    text-decoration: none;
+  }
+  td{
+    background-color: #F9F9F9;
+    border: 1px solid $main-border-color;
+    color:$sub-color;
+    padding:0;
+    width:auto;
+  }
+  .course-tag{
+    display: flex;
+    flex-direction: row;
+    margin: 4px 4px;
+    background-color: white !important;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    .course-color{
+      width:4px;
+      background-color: #A7D8EC;
+    }
+    .course-detail{
+      margin-top:4px;
+      margin-bottom: 4px;
+      p{
+        margin : 0 4px;
+        background-color: white;
+      }
+      .course-name{
+        color: $table-font-color;
+        text-align: left;
+      }
+      .course-teacher{
+        color: $table-th-color;
+      }
+    }
+  }
+  .table-section{
+    width:25px;
+  }
+}
+.white{
+  background-color: white !important;
 }
