--- a/css/course-map.css
+++ b/css/course-map.css
@@ -23,6 +23,14 @@ body {
   overflow-x: hidden;
 }
 
+.desktop {
+  display: block;
+}
+
+.phone {
+  display: none;
+}
+
 main {
   display: grid;
   grid-template-areas: "nav section";
@@ -36,14 +44,12 @@ main {
   main {
     display: flex;
     flex-direction: column;
-    margin: 0 16px;
   }
 }
 @media (max-width: 768px) {
   main {
     display: flex;
     flex-direction: column;
-    margin: 0 16px;
   }
 }
 
@@ -173,6 +179,11 @@ footer .footer-container p.footer-copyright {
   display: flex;
   flex-direction: column;
 }
+@media (max-width: 768px) {
+  .main-container {
+    margin: 24px 16px;
+  }
+}
 .main-container h1 {
   color: #464646;
   margin: 0 30px;
@@ -180,10 +191,18 @@ footer .footer-container p.footer-copyright {
   padding-bottom: 10px;
   display: flex;
   justify-content: space-between;
+  font-weight: 500;
 }
 .main-container h1 span {
   margin-left: auto;
   font-size: 14px;
+}
+.main-container .sub-title {
+  font-size: 16px;
+  color: #71717A;
+  font-weight: 400;
+  margin: 0 30px;
+  padding-bottom: 10px;
 }
 
 .sub-container {
@@ -234,6 +253,25 @@ p {
 .btn-semester a {
   text-decoration: none;
   color: #464646;
+}
+.btn-semester .btn-semester-num {
+  border-radius: 18px;
+  border: 1px solid #e1e3e1;
+  font-size: 12px !important;
+  padding: 4px 12px;
+  margin: 0 12px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.btn-semester .btn-semester-num:hover {
+  background: #f4f4f5;
+}
+@media (max-width: 768px) {
+  .btn-semester .btn-semester-num {
+    padding: 2px 8px;
+    margin: 0 5px;
+  }
 }
 
 .btn-edit {
@@ -476,7 +514,7 @@ table {
 table tr {
   text-decoration: none;
 }
-table th, table .expand-container .expand-sub-container .expand-content .expand-table-container .expand-table td, .expand-container .expand-sub-container .expand-content .expand-table-container .expand-table table td, table td {
+table th, table .expand-container .expand-sub-container .expand-content .expand-table-container .expand-table td, table .expand-container .expand-sub-container .expand-content .expand-table-container-column .expand-table td, .expand-container .expand-sub-container .expand-content .expand-table-container .expand-table table td, .expand-container .expand-sub-container .expand-content .expand-table-container-column .expand-table table td, table td {
   color: #919191;
   padding: 12px 0;
 }
@@ -531,41 +569,61 @@ table td {
   font-weight: bold;
   margin: 0;
 }
-.expand-container .expand-sub-container .expand-content .expand-table-container {
+.expand-container .expand-sub-container .expand-content .expand-table-container, .expand-container .expand-sub-container .expand-content .expand-table-container-column {
   display: flex;
   flex-direction: row;
   border-bottom: 1px solid #e4e4e4;
   border-collapse: collapse;
 }
-.expand-container .expand-sub-container .expand-content .expand-table-container p {
+.expand-container .expand-sub-container .expand-content .expand-table-container p, .expand-container .expand-sub-container .expand-content .expand-table-container-column p {
   display: flex;
   align-items: center;
   width: 30%;
 }
-.expand-container .expand-sub-container .expand-content .expand-table-container .expand-table {
+.expand-container .expand-sub-container .expand-content .expand-table-container .expand-table, .expand-container .expand-sub-container .expand-content .expand-table-container-column .expand-table {
   width: 100%;
   border-collapse: collapse;
 }
-.expand-container .expand-sub-container .expand-content .expand-table-container .expand-table .table-course {
+.expand-container .expand-sub-container .expand-content .expand-table-container .expand-table .table-course, .expand-container .expand-sub-container .expand-content .expand-table-container-column .expand-table .table-course {
   width: 35%;
 }
-.expand-container .expand-sub-container .expand-content .expand-table-container .expand-table th, .expand-container .expand-sub-container .expand-content .expand-table-container .expand-table td {
+.expand-container .expand-sub-container .expand-content .expand-table-container .expand-table th, .expand-container .expand-sub-container .expand-content .expand-table-container-column .expand-table th, .expand-container .expand-sub-container .expand-content .expand-table-container .expand-table td, .expand-container .expand-sub-container .expand-content .expand-table-container-column .expand-table td {
   color: #919191;
   padding: 12px 0;
   font-weight: 500;
 }
-.expand-container .expand-sub-container .expand-content .expand-table-container .expand-table td {
+.expand-container .expand-sub-container .expand-content .expand-table-container .expand-table td, .expand-container .expand-sub-container .expand-content .expand-table-container-column .expand-table td {
   border-top: 1px solid #e4e4e4;
   color: #09090B;
+  font-weight: 400;
 }
-.expand-container .expand-sub-container .expand-content .expand-table-container ul {
+.expand-container .expand-sub-container .expand-content .expand-table-container ul, .expand-container .expand-sub-container .expand-content .expand-table-container-column ul {
   list-style: none;
   padding-left: 0;
 }
-.expand-container .expand-sub-container .expand-content .expand-table-container ul li {
+.expand-container .expand-sub-container .expand-content .expand-table-container ul li, .expand-container .expand-sub-container .expand-content .expand-table-container-column ul li {
   color: #09090B;
-  font-weight: 500;
+  font-weight: 400;
 }
-.expand-container .expand-sub-container .expand-content .expand-table-container:last-child {
+.expand-container .expand-sub-container .expand-content .expand-table-container:last-child, .expand-container .expand-sub-container .expand-content .expand-table-container-column:last-child {
   border-bottom: none;
-}/*# sourceMappingURL=course-map.css.map */
+}
+.expand-container .expand-sub-container .expand-content .expand-table-container-column {
+  flex-direction: column;
+  padding-bottom: 12px;
+}
+.expand-container .expand-sub-container .expand-content .expand-table-container-column p {
+  width: 100%;
+  padding: 12px 0;
+}
+.expand-container .expand-sub-container .expand-content .expand-table-container-column ul {
+  margin: 0;
+}
+.expand-container .expand-sub-container .expand-content .expand-table-container-column ul li {
+  margin: 6px 4px;
+  font-weight: 400;
+}
+.expand-container .expand-sub-container .expand-content .expand-table-container-column:last-child {
+  border-bottom: none;
+  margin-bottom: 24px;
+}
