--- a/css/course-overview.css
+++ b/css/course-overview.css
@@ -24,6 +24,14 @@ body {
   overflow-x: hidden;
 }
 
+.desktop {
+  display: block;
+}
+
+.phone {
+  display: none;
+}
+
 main {
   display: grid;
   grid-template-areas: "nav section";
@@ -37,14 +45,12 @@ main {
   main {
     display: flex;
     flex-direction: column;
-    margin: 0 16px;
   }
 }
 @media (max-width: 768px) {
   main {
     display: flex;
     flex-direction: column;
-    margin: 0 16px;
   }
 }
 
@@ -174,6 +180,11 @@ footer .footer-container p.footer-copyright {
   display: flex;
   flex-direction: column;
 }
+@media (max-width: 768px) {
+  .main-container {
+    margin: 24px 16px;
+  }
+}
 .main-container h1 {
   color: #464646;
   margin: 0 30px;
@@ -181,10 +192,18 @@ footer .footer-container p.footer-copyright {
   padding-bottom: 10px;
   display: flex;
   justify-content: space-between;
+  font-weight: 500;
 }
 .main-container h1 span {
   margin-left: auto;
   font-size: 14px;
+}
+.main-container .sub-title {
+  font-size: 16px;
+  color: #71717A;
+  font-weight: 400;
+  margin: 0 30px;
+  padding-bottom: 10px;
 }
 
 .sub-container {
@@ -235,6 +254,25 @@ p {
 .btn-semester a {
   text-decoration: none;
   color: #464646;
+}
+.btn-semester .btn-semester-num {
+  border-radius: 18px;
+  border: 1px solid #e1e3e1;
+  font-size: 12px !important;
+  padding: 4px 12px;
+  margin: 0 12px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.btn-semester .btn-semester-num:hover {
+  background: #f4f4f5;
+}
+@media (max-width: 768px) {
+  .btn-semester .btn-semester-num {
+    padding: 2px 8px;
+    margin: 0 5px;
+  }
 }
 
 .btn-edit {
@@ -495,6 +533,14 @@ body {
   overflow-x: hidden;
 }
 
+.desktop {
+  display: block;
+}
+
+.phone {
+  display: none;
+}
+
 main {
   display: grid;
   grid-template-areas: "nav section";
@@ -508,14 +554,12 @@ main {
   main {
     display: flex;
     flex-direction: column;
-    margin: 0 16px;
   }
 }
 @media (max-width: 768px) {
   main {
     display: flex;
     flex-direction: column;
-    margin: 0 16px;
   }
 }
 
@@ -645,6 +689,11 @@ footer .footer-container p.footer-copyright {
   display: flex;
   flex-direction: column;
 }
+@media (max-width: 768px) {
+  .main-container {
+    margin: 24px 16px;
+  }
+}
 .main-container h1 {
   color: #464646;
   margin: 0 30px;
@@ -652,10 +701,18 @@ footer .footer-container p.footer-copyright {
   padding-bottom: 10px;
   display: flex;
   justify-content: space-between;
+  font-weight: 500;
 }
 .main-container h1 span {
   margin-left: auto;
   font-size: 14px;
+}
+.main-container .sub-title {
+  font-size: 16px;
+  color: #71717A;
+  font-weight: 400;
+  margin: 0 30px;
+  padding-bottom: 10px;
 }
 
 .sub-container {
@@ -706,6 +763,25 @@ p {
 .btn-semester a {
   text-decoration: none;
   color: #464646;
+}
+.btn-semester .btn-semester-num {
+  border-radius: 18px;
+  border: 1px solid #e1e3e1;
+  font-size: 12px !important;
+  padding: 4px 12px;
+  margin: 0 12px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.btn-semester .btn-semester-num:hover {
+  background: #f4f4f5;
+}
+@media (max-width: 768px) {
+  .btn-semester .btn-semester-num {
+    padding: 2px 8px;
+    margin: 0 5px;
+  }
 }
 
 .btn-edit {
@@ -948,7 +1024,7 @@ table {
 table tr {
   text-decoration: none;
 }
-table th, table .expand-container .expand-sub-container .expand-content .expand-table-container .expand-table td, .expand-container .expand-sub-container .expand-content .expand-table-container .expand-table table td, table td {
+table th, table .expand-container .expand-sub-container .expand-content .expand-table-container .expand-table td, table .expand-container .expand-sub-container .expand-content .expand-table-container-column .expand-table td, .expand-container .expand-sub-container .expand-content .expand-table-container .expand-table table td, .expand-container .expand-sub-container .expand-content .expand-table-container-column .expand-table table td, table td {
   color: #919191;
   padding: 12px 0;
 }
@@ -1003,43 +1079,63 @@ table td {
   font-weight: bold;
   margin: 0;
 }
-.expand-container .expand-sub-container .expand-content .expand-table-container {
+.expand-container .expand-sub-container .expand-content .expand-table-container, .expand-container .expand-sub-container .expand-content .expand-table-container-column {
   display: flex;
   flex-direction: row;
   border-bottom: 1px solid #e4e4e4;
   border-collapse: collapse;
 }
-.expand-container .expand-sub-container .expand-content .expand-table-container p {
+.expand-container .expand-sub-container .expand-content .expand-table-container p, .expand-container .expand-sub-container .expand-content .expand-table-container-column p {
   display: flex;
   align-items: center;
   width: 30%;
 }
-.expand-container .expand-sub-container .expand-content .expand-table-container .expand-table {
+.expand-container .expand-sub-container .expand-content .expand-table-container .expand-table, .expand-container .expand-sub-container .expand-content .expand-table-container-column .expand-table {
   width: 100%;
   border-collapse: collapse;
 }
-.expand-container .expand-sub-container .expand-content .expand-table-container .expand-table .table-course {
+.expand-container .expand-sub-container .expand-content .expand-table-container .expand-table .table-course, .expand-container .expand-sub-container .expand-content .expand-table-container-column .expand-table .table-course {
   width: 35%;
 }
-.expand-container .expand-sub-container .expand-content .expand-table-container .expand-table th, .expand-container .expand-sub-container .expand-content .expand-table-container .expand-table td {
+.expand-container .expand-sub-container .expand-content .expand-table-container .expand-table th, .expand-container .expand-sub-container .expand-content .expand-table-container-column .expand-table th, .expand-container .expand-sub-container .expand-content .expand-table-container .expand-table td, .expand-container .expand-sub-container .expand-content .expand-table-container-column .expand-table td {
   color: #919191;
   padding: 12px 0;
   font-weight: 500;
 }
-.expand-container .expand-sub-container .expand-content .expand-table-container .expand-table td {
+.expand-container .expand-sub-container .expand-content .expand-table-container .expand-table td, .expand-container .expand-sub-container .expand-content .expand-table-container-column .expand-table td {
   border-top: 1px solid #e4e4e4;
   color: #09090B;
+  font-weight: 400;
 }
-.expand-container .expand-sub-container .expand-content .expand-table-container ul {
+.expand-container .expand-sub-container .expand-content .expand-table-container ul, .expand-container .expand-sub-container .expand-content .expand-table-container-column ul {
   list-style: none;
   padding-left: 0;
 }
-.expand-container .expand-sub-container .expand-content .expand-table-container ul li {
+.expand-container .expand-sub-container .expand-content .expand-table-container ul li, .expand-container .expand-sub-container .expand-content .expand-table-container-column ul li {
   color: #09090B;
-  font-weight: 500;
+  font-weight: 400;
 }
-.expand-container .expand-sub-container .expand-content .expand-table-container:last-child {
+.expand-container .expand-sub-container .expand-content .expand-table-container:last-child, .expand-container .expand-sub-container .expand-content .expand-table-container-column:last-child {
   border-bottom: none;
+}
+.expand-container .expand-sub-container .expand-content .expand-table-container-column {
+  flex-direction: column;
+  padding-bottom: 12px;
+}
+.expand-container .expand-sub-container .expand-content .expand-table-container-column p {
+  width: 100%;
+  padding: 12px 0;
+}
+.expand-container .expand-sub-container .expand-content .expand-table-container-column ul {
+  margin: 0;
+}
+.expand-container .expand-sub-container .expand-content .expand-table-container-column ul li {
+  margin: 6px 4px;
+  font-weight: 400;
+}
+.expand-container .expand-sub-container .expand-content .expand-table-container-column:last-child {
+  border-bottom: none;
+  margin-bottom: 24px;
 }
 
 .expand-sub-container .expand-table {
@@ -1062,7 +1158,6 @@ table td {
   width: 10%;
 }
 .expand-sub-container .expand-table .btn-edit {
-  width: -moz-max-content;
   width: max-content;
   margin: 0;
   background-color: white;
@@ -1070,7 +1165,7 @@ table td {
 .expand-sub-container .expand-table tr {
   padding: 12px 0;
 }
-.expand-sub-container .expand-table th, .expand-sub-container .expand-table table td, table .expand-sub-container .expand-table td, .expand-container .expand-sub-container .expand-content .expand-table-container .expand-table td {
+.expand-sub-container .expand-table th, .expand-sub-container .expand-table table td, table .expand-sub-container .expand-table td, .expand-container .expand-sub-container .expand-content .expand-table-container .expand-table td, .expand-container .expand-sub-container .expand-content .expand-table-container-column .expand-table td {
   border-bottom: 1px solid #e4e4e4;
 }
 .expand-sub-container .expand-table td {
@@ -1082,7 +1177,7 @@ table td {
   border-spacing: 10px;
   table-layout: fixed;
 }
-.time-table th, .time-table table td, table .time-table td, .time-table .expand-container .expand-sub-container .expand-content .expand-table-container .expand-table td, .expand-container .expand-sub-container .expand-content .expand-table-container .expand-table .time-table td {
+.time-table th, .time-table table td, table .time-table td, .time-table .expand-container .expand-sub-container .expand-content .expand-table-container .expand-table td, .expand-container .expand-sub-container .expand-content .expand-table-container .expand-table .time-table td, .time-table .expand-container .expand-sub-container .expand-content .expand-table-container-column .expand-table td, .expand-container .expand-sub-container .expand-content .expand-table-container-column .expand-table .time-table td {
   border-radius: 4px;
   background-color: #EEEEEE;
   text-align: center;
@@ -1116,9 +1211,21 @@ table td {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
-.time-table .course-tag .course-color {
+.time-table .course-tag .course-color-1 {
   width: 4px;
-  background-color: #A7D8EC;
+  background-color: rgb(111, 111, 111);
+}
+.time-table .course-tag .course-color-2 {
+  width: 4px;
+  background-color: rgb(10, 132, 255);
+}
+.time-table .course-tag .course-color-3 {
+  width: 4px;
+  background-color: rgb(245, 204, 63);
+}
+.time-table .course-tag .course-color-4 {
+  width: 4px;
+  background-color: rgb(167, 216, 236);
 }
 .time-table .course-tag .course-detail {
   margin-top: 4px;
@@ -1141,4 +1248,4 @@ table td {
 
 .white {
   background-color: white !important;
-}/*# sourceMappingURL=course-overview.css.map */
+}
