--- a/css/learning-footprint.css
+++ b/css/learning-footprint.css
@@ -23,6 +23,14 @@ body {
   overflow-x: hidden;
 }
 
+.desktop {
+  display: block;
+}
+
+.phone {
+  display: none;
+}
+
 main {
   display: grid;
   grid-template-areas: "nav section";
@@ -36,14 +44,12 @@ main {
   main {
     display: flex;
     flex-direction: column;
-    margin: 0 16px;
   }
 }
 @media (max-width: 768px) {
   main {
     display: flex;
     flex-direction: column;
-    margin: 0 16px;
   }
 }
 
@@ -173,6 +179,11 @@ footer .footer-container p.footer-copyright {
   display: flex;
   flex-direction: column;
 }
+@media (max-width: 768px) {
+  .main-container {
+    margin: 24px 16px;
+  }
+}
 .main-container h1 {
   color: #464646;
   margin: 0 30px;
@@ -180,10 +191,18 @@ footer .footer-container p.footer-copyright {
   padding-bottom: 10px;
   display: flex;
   justify-content: space-between;
+  font-weight: 500;
 }
 .main-container h1 span {
   margin-left: auto;
   font-size: 14px;
+}
+.main-container .sub-title {
+  font-size: 16px;
+  color: #71717A;
+  font-weight: 400;
+  margin: 0 30px;
+  padding-bottom: 10px;
 }
 
 .sub-container {
@@ -234,6 +253,25 @@ p {
 .btn-semester a {
   text-decoration: none;
   color: #464646;
+}
+.btn-semester .btn-semester-num {
+  border-radius: 18px;
+  border: 1px solid #e1e3e1;
+  font-size: 12px !important;
+  padding: 4px 12px;
+  margin: 0 12px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.btn-semester .btn-semester-num:hover {
+  background: #f4f4f5;
+}
+@media (max-width: 768px) {
+  .btn-semester .btn-semester-num {
+    padding: 2px 8px;
+    margin: 0 5px;
+  }
 }
 
 .btn-edit {
@@ -485,11 +523,13 @@ table tr.active-row {
 table .table-expand-row {
   display: none;
   font-size: 12px;
+  width: 100%;
 }
 table th, table td {
   border-bottom: 1px solid #e4e4e4;
   color: #919191;
   padding: 12px 0;
+  font-weight: 400;
 }
 table td {
   color: #09090B;
@@ -498,6 +538,7 @@ table td {
 table .table-expand-td {
   padding: 20px 0 !important;
   border-bottom: 1px solid #e4e4e4;
+  table-layout: fixed;
 }
 table .table-expand-td p {
   margin: 0 15px !important;
@@ -514,6 +555,7 @@ table .table-expand-td:last-child {
 }
 table .table-column1 {
   width: 30%;
+  padding-left: 15px;
 }
 table .table-column2 {
   width: 70%;
@@ -530,9 +572,22 @@ table .table-column5 {
 table .table-column6 {
   width: 40%;
 }
+table .table-column7 {
+  width: 15%;
+  padding-left: 15px;
+}
+table .table-column8 {
+  width: 20%;
+}
+table .table-column9 {
+  width: 10%;
+}
+table .table-phone-expand {
+  padding-left: 15px;
+}
 table .expand-btn {
   width: 5%;
 }
 table .expand-btn:hover {
   cursor: pointer;
-}/*# sourceMappingURL=learning-footprint.css.map */
+}
