--- a/scss/basic-info.scss
+++ b/scss/basic-info.scss
@@ -17,7 +17,12 @@ body {
   text-align: center;
   overflow-x: hidden;
 }
-
+.desktop{
+  display: block;
+}
+.phone{
+  display: none;
+}
 main {
   display: grid;
   grid-template-areas:
@@ -28,13 +33,13 @@ main {
   @include tablet {
     display: flex;
     flex-direction: column;
-    margin: 0 16px;
+    //margin: 0 16px;
   }
 
   @include phone {
     display: flex;
     flex-direction: column;
-    margin: 0 16px;
+    //margin: 0 16px;
   }
 
   margin:0 auto;
@@ -131,7 +136,7 @@ footer {
       font-size: 20px;
       display: inline-block;
       margin: 0 auto 0 0;
-
+      
       @include tablet {
         display: block;
       }
@@ -180,6 +185,9 @@ footer {
   margin: 24px 32px;
   display: flex;
   flex-direction: column;
+  @include phone {
+    margin: 24px 16px;
+  }
 
   h1 {
     color: $main-font-color;
@@ -188,11 +196,19 @@ footer {
     padding-bottom: 10px;
     display: flex;
     justify-content: space-between;
-
+    font-weight: 500;
     span {
       margin-left: auto;
       font-size: 14px;
     }
+    
+  }
+  .sub-title{
+    font-size: 16px;
+    color: $table-th-color;
+    font-weight:400;
+    margin: 0 30px;
+    padding-bottom:10px;
   }
 }
 
@@ -251,6 +267,23 @@ p {
   a {
     text-decoration: none;
     color: $main-font-color;
+  }
+  .btn-semester-num{
+    border-radius: 18px;
+    border: 1px solid $btn-border-color;
+    font-size: $btn-font-size !important;
+    padding: 4px 12px;
+    margin: 0 12px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    &:hover {
+      background: $btn-hover-color;
+    }
+    @include phone {
+      padding: 2px 8px;
+      margin: 0 5px;
+    }
   }
 }
 
