--- a/scss/course-overview.scss
+++ b/scss/course-overview.scss
@@ -84,9 +84,21 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
-    .course-color{
+    .course-color-1{
       width:4px;
-      background-color: #A7D8EC;
+      background-color: rgb(111, 111, 111);
+    }
+    .course-color-2{
+      width:4px;
+      background-color: rgb(10, 132, 255);
+    }
+    .course-color-3{
+      width:4px;
+      background-color: rgb(245, 204, 63);
+    }
+    .course-color-4{
+      width:4px;
+      background-color: rgb(167, 216, 236);
     }
     .course-detail{
       margin-top:4px;
